Add Donate text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="back_exit">Press back again to exit</string>
     <string name="find_us">Find us on</string>
     <string name="design_dev_by"><![CDATA[Developed and designed by <> GDSC MMCOE]]></string>
+    <string name="donate_us_text">Instead of spending on birthday parties and wasting your hard earned money on cakes and blowing candles… Donate for this noble cause with each donation you are helping the nature and the people that keep it clean!</string>
 </resources>
